[project]
name = "xhs-blogger-miner"
version = "0.1.0"
description = "Config-driven XHS blogger data collection tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "humps>=0.2.2",
    "opencv-python>=4.11.0",
    "pillow>=9.5.0",
    "playwright>=1.44.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "redis>=4.6.0",
    "tenacity>=8.2.0",
    "xhshow>=0.1.9",
]

# MediaCrawler: local path dependency managed via sys.path (see src/mediacrawler.py).
# Dependencies above are the subset of MediaCrawler's deps needed by our import chain.
# Full MediaCrawler dependency list:
#   https://github.com/NanmiCoder/MediaCrawler/blob/main/pyproject.toml

[project.scripts]
xhs-miner = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
